# auto_scout

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  hunt.yml
api/: index.py
app/: __init__.py  alerting.py  api_schemas.py  config.py  db.py  dedup.py  fx.py  main.py  models.py  normalize.py  pipeline.py  retention.py  run_once.py
app/notify/: __init__.py  telegram.py
app/scoring/: __init__.py  engine.py
app/scrapers/: __init__.py  autoscout24.py  base.py  mobilede.py  sauto.py
docs/superpowers/specs/: 2026-06-18-car-deal-hunter-design.md
scripts/: seed_demo.py  telegram_chatid.py
tests/: conftest.py  test_api.py  test_de_scrapers.py  test_dedup.py  test_failures.py  test_fx.py  test_normalize.py  test_pipeline.py  test_retention.py  test_sauto_scraper.py  test_scoring.py  test_telegram.py
tests/fixtures/: autoscout24_sample.json  mobilede_state.json  sauto_sample.json
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  Drawer.tsx  api.ts  format.ts  styles.css  types.ts
