[project]
name = "car-deal-hunter"
version = "0.1.0"
description = "Hlida inzeraty ojetych aut, boduje dealy vuci trhu a posila push na Telegram."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "black>=24.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
